# cast-value.py

./: .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: benchmarks.yml  cd.yml  ci.yml
docs/: api.md  index.md
examples/benchmarks/: bench_numpy_vs_rust.py
examples/zarr_integration/: zarr_cast_value.py
src/cast_value/: __init__.py  core.py  types.py
src/cast_value/impl/: _numpy.py
src/cast_value/zarr_compat/: __init__.py  _parsing.py  v1.py
src/cast_value/zarr_compat/v1/: __init__.py  _base.py  _entrypoint.py  numpy_codec.py  rust_codec.py
tests/: conftest.py  test_core.py  test_examples.py  test_package.py  test_zarr_compat.py
tests/benchmark/: test_cast_memory.py  test_cast_perf.py
tests/zarr_compat/v1/: _cases.py  _helpers.py  test_base.py  test_entrypoint.py  test_numpy_codec.py  test_rust_codec.py  test_rust_missing.py
